--- a/signUp.html
+++ b/signUp.html
@@ -14,29 +14,29 @@
         <form action="dane.php" method="post">
             <h3>Your Personal Information</h3>
             <label class="signData"  for="name">Name</label><span style="color: red !important; display: inline; float: none;">*</span>
-            <input type="text" id="name" name="name"><br>
+                <input type="text" id="name" name="name"><br>
             <label class="signData"  for="secondName">Second Name:</label><span style="color: red !important; display: inline; float: none;">*</span>
-            <input type="text" id="secondName" name="secondName"><br>
+                <input type="text" id="secondName" name="secondName"><br>
             <label class="signData"  for="email">E-mail:</label><span style="color: red !important; display: inline; float: none;">*</span>
-            <input type="email" id="email" name="email"><br>
+                <input type="email" id="email" name="email"><br>
             <label class="signData" for="password">password:</label><span style="color: red !important; display: inline; float: none;">*</span>
-            <input type="password" id="password" name="password" ><br>
+                <input type="password" id="password" name="password" ><br>
             <label class="signData" for="news">Sign to our news letter</label>
-            <input type="checkbox"  id="news" name="news">
+                <input type="checkbox"  id="news" name="news">
         </label>
         <h3>Your Address</h3>
         <label class="signData"  for="name2">Name:</label><span style="color: red !important; display: inline; float: none;">*</span>
-        <input type="text" id="name2" name="name2" value=""><br>
+            <input type="text" id="name2" name="name2" value=""><br>
         <label class="signData"  for="secondName2">Second Name:</label><span style="color: red !important; display: inline; float: none;">*</span>
-        <input type="text" id="secondName2" name="secondName2"><br>
+            <input type="text" id="secondName2" name="secondName2"><br>
         <label class="signData"  for="company">Company:</label>
-        <input type="text" id="company" name="company" ><br>
+            <input type="text" id="company" name="company" ><br>
         <label class="signData"  for="street">Street and house number: </label><span style="color: red !important; display: inline; float: none;">*</span>
-        <input type="text" id="street" name="street"><br>
+            <input type="text" id="street" name="street"><br>
         <label class="signData"  for="postCode">ZIP code: </label><span style="color: red !important; display: inline; float: none;">*</span>
-        <input type="text" id="postCode" name="postCode"><br>
+            <input type="text" id="postCode" name="postCode"><br>
         <label class="signData"  for="city">City:</label><span style="color: red !important; display: inline; float: none;">*</span>
-        <input type="text" id="city" name="city" value=""><br>
+            <input type="text" id="city" name="city" value=""><br>
         <label class="signData"  for="country">Country:</label><span style="color: red !important; display: inline; float: none;">*</span>         
             <select id="country" name="country" class="form-control">
                 <option value="Afghanistan">Afghanistan</option>
@@ -286,6 +286,7 @@
             </select><br>
             <label class="signData"  for="phone">Phone:</label><span style="color: red !important; display: inline; float: none;">*</span>
             <input type="number" id="phone" name="phone">
+            <input type="submit" id="submit" value="zaloguj">
         </form>
         
         
