--- a/signUp.html
+++ b/signUp.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <head>
-        <h2>Zaloguj siue</h2>
+        <h2>Fill informations</h2>
     </head>
     <section class="signUp">
         <form action="dane.php" method="post">
             <h3>Your Personal Information</h3>
             <label class="signData"  for="name">Name</label><span style="color: red !important; display: inline; float: none;">*</span>
                 <input type="text" id="name" name="name"><br>
-            <label class="signData"  for="secondName">Second Name:</label><span style="color: red !important; display: inline; float: none;">*</span>
+            <label class="signData"  for="secondName">Last Name:</label><span style="color: red !important; display: inline; float: none;">*</span>
                 <input type="text" id="secondName" name="secondName"><br>
             <label class="signData"  for="email">E-mail:</label><span style="color: red !important; display: inline; float: none;">*</span>
                 <input type="email" id="email" name="email"><br>
@@ -27,7 +27,7 @@
         <h3>Your Address</h3>
         <label class="signData"  for="name2">Name:</label><span style="color: red !important; display: inline; float: none;">*</span>
             <input type="text" id="name2" name="name2" value=""><br>
-        <label class="signData"  for="secondName2">Second Name:</label><span style="color: red !important; display: inline; float: none;">*</span>
+        <label class="signData"  for="secondName2">Last Name:</label><span style="color: red !important; display: inline; float: none;">*</span>
             <input type="text" id="secondName2" name="secondName2"><br>
         <label class="signData"  for="company">Company:</label>
             <input type="text" id="company" name="company" ><br>
