--- a/changePassword.html
+++ b/changePassword.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <head>
-        <h2>Zaloguj siue</h2>
+        <h2>Zmień Hasło</h2>
     </head>
     <section class="login">
-        <form action="login.php" method="post">
-            <label for="login">
-                <h3>login</h3>
+        <form action="changePassword.php" method="post">
+            <label for="login"><strong>Login</strong></label><span style="color: red !important; display: inline; float: none;">*</span>
                 <input type="text" name="login">
-            </label>
-            <label for="password">
-                <h3>Password</h3>
-                <input type="password" name="password">
             </label><br>
+            <label for="newPassword"><strong>New Password</strong></label><span style="color: red !important; display: inline; float: none;">*</span>
+                <input type="password" name="newPassword">
+            <br>
+            <label for="submitPassword"><strong>Submit Password</strong></label><span style="color: red !important; display: inline; float: none;">*</span>
+            <input type="password" name="submitPassword"><br>
             <input type="submit" value="submit">
         </form>
         <a href="signUp.html">Nie mam konta</a>
