--- a/rejestracja/signUp.html
+++ b/rejestracja/signUp.html
@@ -291,8 +291,8 @@
         
         
     </section>
-    <a href="changePassword.html">nie pamietam hasła</a>
-    <a href="index.html">Zaloguj sie</a>
+    <a href="/zmiana hasła/changePassword.html">nie pamietam hasła</a>
+    <a href="/logowanie/index.html">Zaloguj sie</a>
 </body>
 <script src="script.js"></script>
 </html>
