--- a/zmiana hasła/changePassword.html
+++ b/zmiana hasła/changePassword.html
@@ -22,8 +22,8 @@
             <input type="password" name="submitPassword"><br>
             <input type="submit" value="submit">
         </form>
-        <a href="signUp.html">Nie mam konta</a>
-        <a href="index.html">Zaloguj sie</a>
+        <a href="/rejestracja/signUp.html">Nie mam konta</a>
+        <a href="/logowanie/index.html">Zaloguj sie</a>
     </section>
 </body>
 </html>
