--- a/rejestracja/signUp.html
+++ b/rejestracja/signUp.html
@@ -22,7 +22,7 @@
             <label class="signData" for="password">password:</label><span style="color: red !important; display: inline; float: none;">*</span>
                 <input type="password" id="password" name="password" ><br>
             <label class="signData" for="news">Sign to our news letter</label>
-                <input type="checkbox"  id="news" name="news" value="yes" checked>
+                <input type="checkbox"  id="news" name="news" checked>
         </label>
         <h3>Your Address</h3>
         <label class="signData"  for="name2">Name:</label><span style="color: red !important; display: inline; float: none;">*</span>
