--- a/zmiana hasła/changePassword.html
+++ b/zmiana hasła/changePassword.html
@@ -18,7 +18,7 @@
             <label for="newPassword"><strong>New Password</strong></label><span style="color: red !important; display: inline; float: none;">*</span>
                 <input type="password" name="newPassword">
             <br>
-            <label for="submitPassword"><strong>Submit New Password</strong></label><span style="color: red !important; display: inline; float: none;">*</span>
+            <label for="submitPassword"><strong>Submit Password</strong></label><span style="color: red !important; display: inline; float: none;">*</span>
             <input type="password" name="submitPassword"><br>
             <input type="submit" value="submit">
         </form>
