--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </label><br>
             <input type="submit" value="submit">
         </form>
-        <a href="/rejestracja/signUp.html">Nie mam konta</a>
-        <a href="/zmiana hasła/changePassword.html">nie pamietam hasła</a>
+        <a href="signup.html">Nie mam konta</a>
+        <a href="changePassword.html">nie pamietam hasła</a>
     </section>
 </body>
 </html>
