--- a/changePassword.html
+++ b/changePassword.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pawel Koc</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <head>
+    <header>
         <h2>Zmień Hasło</h2>
-    </head>
+    </header>
     <section class="login">
         <form action="changePassword.php" method="post">
+            <h2>Fill the information</h2>
             <label for="login"><strong>Login</strong></label><span style="color: red !important; display: inline; float: none;">*</span>
                 <input type="text" name="login">
             </label><br>
@@ -20,8 +22,8 @@
             <br>
             <label for="submitPassword"><strong>Submit Password</strong></label><span style="color: red !important; display: inline; float: none;">*</span>
             <input type="password" name="submitPassword"><br>
-            <input type="submit" value="submit">
-        </form>
+            <input id="submit" type="submit" value="Submit">
+        </form><br>
         <a href="signUp.html">Nie mam konta</a>
         <a href="index.html">Zaloguj sie</a>
     </section>
