--- a/index.html
+++ b/index.html
@@ -5,25 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pawel Koc</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <head>
+    <header>
         <h2>Zaloguj siue</h2>
-    </head>
+    </header>
     <section class="login">
         <form action="login.php" method="post">
             <label for="login">
-                <h3>login</h3>
-                <input type="text" name="login">
+                <h3>Login</h3>
+                <input class="inputs" type="text" name="login">
             </label>
             <label for="password">
                 <h3>Password</h3>
-                <input type="password" name="password">
+                <input class="inputs" type="password" name="password">
             </label><br>
-            <input type="submit" value="submit">
+            <input id="submit" type="submit" value="Submit">
         </form>
-        <a href="signup.html">Nie mam konta</a>
-        <a href="changePassword.html">nie pamietam hasła</a>
-    </section>
+        <div id="links">
+            <a href="changePassword.html">Nie pamietam hasła</a>
+            <a href="signup.html">Nie mam konta</a>
+        </div>
+        </section>
 </body>
 </html>
